--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ author:
       url: "https://github.com/tobiasdirksen"
 
 header:
-  image: /assets/images/header_data_resized.jpg
+  overlay_image: /assets/images/header_data_resized.jpg
   caption: "<a href="https://www.freepik.com/photos/cyber-pattern">Cyber pattern photo created by svstudioart - www.freepik.com</a>"
   
 footer:
